--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,9 +7,11 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@uiw/watermark.js": "^1.0.1",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-router-dom": "^7.1.3"
+		"react-router-dom": "^7.1.3",
+		"sass": "^1.83.4"
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.33",
