--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,14 +4,18 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"migrate-sass": "sass-migrator division src/styles/index.sass"
 	},
 	"dependencies": {
+		"@tanstack/react-query": "^5.64.2",
 		"@uiw/watermark.js": "^1.0.1",
+		"axios": "^1.7.9",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-router-dom": "^7.1.3",
-		"sass": "^1.83.4"
+		"sass": "^1.83.4",
+		"sass-migrator": "^2.3.1"
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.33",
