--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,6 +13,8 @@
 		"axios": "^1.7.9",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-icons": "^5.4.0",
+		"react-loader-spinner": "^6.1.6",
 		"react-router-dom": "^7.1.3",
 		"sass": "^1.83.4",
 		"sass-migrator": "^2.3.1"
