--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,18 +10,19 @@
 	"dependencies": {
 		"@tanstack/react-query": "^5.64.2",
 		"@uiw/watermark.js": "^1.0.1",
+		"@vitejs/plugin-react": "^4.3.4",
 		"axios": "^1.7.9",
-		"react": "^18",
-		"react-dom": "^18",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
 		"react-icons": "^5.4.0",
 		"react-loader-spinner": "^6.1.6",
 		"react-router-dom": "^7.1.3",
-		"sass": "^1.83.4",
-		"sass-migrator": "^2.3.1"
+		"sass-migrator": "^2.3.1",
+		"vite": "^6.0.11"
 	},
 	"devDependencies": {
-		"@types/react": "^17.0.33",
-		"@types/react-dom": "^17.0.10",
+		"@types/react": "^19.0.8",
+		"@types/react-dom": "^19.0.3",
 		"@vitejs/plugin-react": "^1.0.7",
 		"sass": "^1.83.4",
 		"typescript": "^4.4.4",
